# AlphaCrane

./: .gitignore  CMakeLists.txt  Makefile  README.MD  Solver.h
Algorithm/: Balance.cpp  Balance.h  Node.cpp  Node.h  Source.cpp
CS179 Project Snapshot 1/: Balance Algorithm CS179.vcxproj  Balance Algorithm CS179.vcxproj.filters  Balance.cpp  Balance.h  Container.h  ContainerFactory.h  ContainerGrid.cpp  ContainerGrid.h  Node.cpp  Node.h  Point.h  Source.cpp  parser.cpp  parser.h
GUI/: CMakeLists.txt  GUI.pro  annotation.cpp  annotation.h  annotation.ui  containerbutton.cpp  containerbutton.h  dialog.cpp  dialog.h  dialog.ui  loadcontainer.cpp  loadcontainer.h  loadcontainer.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave
Logger/: CMakeLists.txt  Logger  Logger.cpp  Makefile
Outputs/: manifest.txt
Parser/: Balance.cpp  Balance.h  CMakeLists.txt  Container.h  ContainerFactory.h  ContainerGrid.cpp  ContainerGrid.h  Makefile  Node.cpp  Node.h  Parser.cpp  Parser.h  Point.h  Solver.cpp  Solver.h  Source.cpp  a.out  main  parser.cpp  parser.h  point.h  test.cpp
ShipCases/: Sample_ship_problems_2022.pptx  ShipCase2.txt  ShipCase3.txt  ShipCase4.txt  ShipCase5.txt
build-GUI-Desktop-Debug/: CMakeCache.txt  notepad
build-GUI-Desktop-Debug/notepad_autogen/: moc_predefs.h
build-GUI-Desktop-Debug/notepad_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
build-GUI-Desktop-Debug/notepad_autogen/include/: ui_mainwindow.h
includes/: Logger.h  events.h
